tests/files/parser_tests/should_fail/025.cmdr
//Should not parse due to unterminated tuple
x = (1;
